# miv-text-editor

./: .gitignore  Cargo.toml  Makefile  README.md  example-config.toml
src/: command.rs  document.rs  editor.rs  filetype.rs  highlighting.rs  keymaps.rs  main.rs  mode.rs  position.rs  row.rs  settings.rs  terminal.rs
