[package]
name = "miv-text-editor"
version = "0.2.0"
edition = "2021"

[dependencies]
crossterm = "0.26"
unicode-segmentation = "1.10"
syntect = "5.0"
config = "0.13.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
simplelog = "0.12.1"
clap = "4.3.8"
serde = { version = "1.0", features = ["derive"] }